@@ -1442,6 +1442,11 @@ setting the parameter <classname>preseed/interactive=true</classname> at
 the boot prompt. This can also be useful for testing or debugging your
 preconfiguration file.
 
+Note that the <quote>d-i</quote> owner should only be used for variables
+used in the installer itself. For variables belonging to packages installed
+on the target system, you should use the name of that package instead. See
+the footnote to <xref linkend="preseed-bootparms"/>.
+
 </para><para>
 
 If you are preseeding using boot parameters, you can make the installer ask
