@@ -2,6 +2,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
 
   [ Colin Watson ]
   * Document partman/early_command (added in partman-base 129).
+  * Add note about preseeding ownership to preseed-seenflag section, since I
+    had a user confused by this who hadn't found the note elsewhere
+    explaining owners.
 
   [ Frans Pop ]
   * Document preseeding of network-console now that its postinst can be
